# kcom-store-sales

./: .env.example  .gitignore  AGENTS.md  Iteration.md  Makefile  README.md  pyproject.toml
config/: baseline.yaml  benchmark-leading-zero-trim.yaml  benchmark.yaml  config.yaml  linear-log-fourier.yaml  linear-log.yaml  linear-poisson.yaml  linear-smoke.yaml  linear-tweedie.yaml  linear.yaml  nixtla.yaml  toto.yaml  xgboost.yaml
config/experiments/: linear-log-trim.yaml  no-lag1.yaml  smoke.yaml  toto-ctx512.yaml  toto-log-ctx512.yaml  toto-log.yaml  xgboost-trim.yaml
notebooks/: linear_baseline.ipynb  visualize_predictions.ipynb
scripts/: audit_metrics.py  compare.py  compare_models.py  kaggle_toto_kernel.py  pick_best.py  plot_daily_aggregate.py  predict.py  train.py  train_linear.py  train_nixtla.py  train_toto.py  viz_gif.py
src/store_sales/: __init__.py  data.py  features.py  inference.py  metrics.py  metrics_audit.py  models.py  nixtla_pipeline.py  recursive.py  toto_pipeline.py  tracking.py  viz.py
tests/: test_metrics.py  test_metrics_audit.py  test_preprocessing.py  test_recursive.py  test_toto_pipeline.py
