[project]
name = "kcom-store-sales"
version = "0.1.0"
description = "Kaggle: Store Sales — Time Series Forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.2",
    "numpy>=1.24",
    "pandas>=2.0,<3",
    "scikit-learn>=1.3",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
nixtla = [
    "statsforecast>=2.0",
    "mlforecast>=1.0",
    "utilsforecast>=0.2.12",
]
toto = [
    "toto-2>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/store_sales"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Kaggle notebook kernel uses cell-style imports (E402) by design
"scripts/kaggle_toto_kernel.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring external resources",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
]
